--- a/profDoc.html
+++ b/profDoc.html
@@ -19,9 +19,9 @@
                     <i class="fas fa-book-medical"></i>
                     <h1>MedNotes - Professor</h1>
                 </div>
-                <button id="logout-btn" class="logout-button">
+                <button id="logout-btn" class="logout-button"><a href="index.html">
                     <i class="fas fa-sign-out-alt"></i> Sair
-                </button>
+                </a></button>
             </div>
         </header>
         
