--- a/public/professor/profDoc.html
+++ b/public/professor/profDoc.html
@@ -19,7 +19,7 @@
                     <i class="fas fa-book-medical"></i>
                     <h1>MedNotes - Professor</h1>
                 </div>
-                <button id="logout-btn" class="logout-button"><a href="index.html">
+                <button id="logout-btn" class="logout-button"><a href="../home/index.html">
                         <i class="fas fa-sign-out-alt"></i> Sair
                     </a></button>
             </div>
