Movido o arquivo index.html para fora do public para poder fazer o gitpages

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>MedNotes - Caderneta Digital</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="/public/home/index.css">
 </head>
 
 <body class="bg-gray-50 min-h-screen">
@@ -160,7 +160,7 @@
     </div>
 
     <!-- Scripts -->
-    <script src="index.js"></script>
+    <script src="/public/home/index.js"></script>
 </body>
 
 </html>
