Ajustado href no botão de logout

--- a/public/admin/configADM.html
+++ b/public/admin/configADM.html
@@ -26,7 +26,7 @@
                     <i class="fas fa-plus mr-1 sm:mr-2"></i><span class="hidden sm:inline">Adicionar</span>
                 </button>
                 <button id="logout-btn" class="text-gray-600 hover:text-blue-600 text-sm sm:text-base">
-                    <i class="fas fa-sign-out-alt"></i> <span class="hidden sm:inline"><a href="../home/index.html">Sair</a></span>
+                    <i class="fas fa-sign-out-alt"></i> <span class="hidden sm:inline"><a href="../../login.html">Sair</a></span>
                 </button>
             </div>
         </div>
