--- a/public/professor/profDoc.html
+++ b/public/professor/profDoc.html
@@ -19,9 +19,9 @@
                     <i class="fas fa-book-medical"></i>
                     <h1>MedNotes - Professor</h1>
                 </div>
-                <button id="logout-btn" class="logout-button"><a href="../home/index.html">
+                <button id="logout-btn" class="logout-button">
                         <i class="fas fa-sign-out-alt"></i> Sair
-                    </a></button>
+                </button>
             </div>
         </header>
 
