--- a/public/professor/profDoc.html
+++ b/public/professor/profDoc.html
@@ -7,6 +7,7 @@
     <title>MedNotes - Visualização do Professor</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="profDoc.css">
+    <link rel="shortcut icon" type="image/svg" href="/logo-aba_book-medical-solid.svg"/>
 </head>
 
 <body>
