--- a/public/aluno/alunoUso.html
+++ b/public/aluno/alunoUso.html
@@ -7,38 +7,13 @@
     <title>MedNotes - Caderneta Digital</title>
     <link rel="stylesheet" href="AlunoUso.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="shortcut icon" type="image/svg" href="/logo-aba_book-medical-solid.svg"/>
 </head>
 
 <body>
-    <!-- Tela de Login -->
-    <div id="login-screen" class="login-screen">
-        <div class="login-container">
-            <div class="login-header">
-                <i class="fas fa-book-medical login-icon"></i>
-                <h1>MedNotes</h1>
-                <p>Sua caderneta médica digital</p>
-            </div>
-
-            <form id="login-form" class="login-form">
-                <div class="form-group">
-                    <label for="email">E-mail</label>
-                    <input type="email" id="email" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="password">Senha</label>
-                    <input type="password" id="password" required>
-                </div>
-
-                <button type="submit" class="login-button">
-                    <i class="fas fa-sign-in-alt"></i> Entrar
-                </button>
-            </form>
-        </div>
-    </div>
 
     <!-- Aplicação Principal (inicialmente oculta) -->
-    <div id="app" class="app-container hidden">
+    <div id="app" class="app-container">
         <!-- Cabeçalho -->
         <header class="app-header">
             <div class="header-content">
