--- a/public/admin/configADM.html
+++ b/public/admin/configADM.html
@@ -69,6 +69,9 @@
                     <div>
                         <label for="password" class="block text-sm font-medium text-gray-700">Senha</label>
                         <input type="password" id="password" name="password" required class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-1 sm:py-2 px-2 sm:px-3 focus:outline-none focus:ring-blue-500 focus:border-blue-500 text-sm sm:text-base">
+                        <button type="button" id="toggle-password" class="text-gray-500 hover:text-gray-700 mt-1">
+                            <i class="fas fa-eye"></i>
+                        </button>
                     </div>
                     <div>
                         <label for="role" class="block text-sm font-medium text-gray-700">Função</label>
