--- a/public/admin/configADM.html
+++ b/public/admin/configADM.html
@@ -66,12 +66,15 @@
                         <label for="email" class="block text-sm font-medium text-gray-700">E-mail</label>
                         <input type="email" id="email" name="email" required class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-1 sm:py-2 px-2 sm:px-3 focus:outline-none focus:ring-blue-500 focus:border-blue-500 text-sm sm:text-base">
                     </div>
-                    <div>
+                    <div class="relative">
                         <label for="password" class="block text-sm font-medium text-gray-700">Senha</label>
-                        <input type="password" id="password" name="password" required class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-1 sm:py-2 px-2 sm:px-3 focus:outline-none focus:ring-blue-500 focus:border-blue-500 text-sm sm:text-base">
-                        <button type="button" id="toggle-password" class="text-gray-500 hover:text-gray-700 mt-1">
-                            <i class="fas fa-eye"></i>
-                        </button>
+                        <div class="relative mt-1">
+                            <input type="password" id="password" name="password" required
+                                class="block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 pr-10 focus:outline-none focus:ring-blue-500 focus:border-blue-500 text-sm">
+                            <button type="button" id="toggle-password" class="absolute inset-y-0 right-0 pr-3 flex items-center text-gray-400 hover:text-gray-600">
+                                <i class="far fa-eye"></i>
+                            </button>
+                        </div>
                     </div>
                     <div>
                         <label for="role" class="block text-sm font-medium text-gray-700">Função</label>
