Adicionado o botão para mudar o tema do site entre claro e escuro.

--- a/public/professor/profDoc.html
+++ b/public/professor/profDoc.html
@@ -46,9 +46,15 @@
                     <i class="fas fa-book-medical"></i>
                     <h1>MedNotes - Professor</h1>
                 </div>
-                <button id="logout-btn" class="logout-button">
+                <div class="header-actions">
+                    <!-- Botão para alternar entre tema claro/escuro -->
+                    <button id="theme-toggle" class="theme-toggle">
+                        <i class="fas fa-moon"></i>
+                    </button>
+                    <button id="logout-btn" class="logout-button">
                         <i class="fas fa-sign-out-alt"></i> Sair
-                </button>
+                    </button>
+                </div>
             </div>
         </header>
 
