--- a/login.html
+++ b/login.html
@@ -27,9 +27,12 @@
                     <input type="email" id="email" required class="w-full px-4 py-2 rounded-lg border border-gray-300 focus:ring-2 focus:ring-blue-500">
                 </div>
 
-                <div>
+                <div class="relative">
                     <label for="password" class="block text-sm font-medium text-gray-700 mb-1">Senha</label>
                     <input type="password" id="password" required class="w-full px-4 py-2 rounded-lg border border-gray-300 focus:ring-2 focus:ring-blue-500">
+                    <button type="button" id="toggle-password" class="absolute inset-y-0 right-0 pr-3 flex items-center text-gray-400 hover:text-gray-600" style="padding-top: 1.5rem;">
+                        <i class="far fa-eye"></i>
+                    </button>
                 </div>
 
                 <button type="submit" class="w-full bg-blue-600 text-white py-2 px-4 rounded-lg hover:bg-blue-700 transition font-medium">
