--- a/public/admin/configADM.html
+++ b/public/admin/configADM.html
@@ -22,10 +22,17 @@
                 <i class="fas fa-book-medical text-xl text-blue-500 mr-2"></i>
                 <h1 class="text-lg sm:text-xl font-bold text-gray-800">MedNotes - Admin Center</h1>
             </div>
+            
             <div class="flex items-center gap-2 self-end sm:self-auto">
+                <!-- Botão para alternar entre tema claro/escuro -->
+                <button id="theme-toggle" class="theme-toggle">
+                    <i class="fas fa-moon"></i>
+                </button>
+
                 <button id="add-user-btn"class="px-3 py-1 sm:px-4 sm:py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600 text-sm sm:text-base">
                     <i class="fas fa-plus mr-1 sm:mr-2"></i><span class="hidden sm:inline">Adicionar</span>
                 </button>
+                
                 <button id="logout-btn" class="text-gray-600 hover:text-blue-600 text-sm sm:text-base">
                     <i class="fas fa-sign-out-alt"></i> <span class="hidden sm:inline"><a href="../../login.html">Sair</a></span>
                 </button>
