--- a/public/admin/configADM.html
+++ b/public/admin/configADM.html
@@ -16,11 +16,12 @@
     <header class="shadow-sm p-4" style="background-color: var(--header-bg);">
         <div class="container mx-auto flex flex-col sm:flex-row justify-between items-start sm:items-center gap-2">
             <div class="flex items-center">
-                <a href="index.html" class="mr-4 text-gray-600 hover:text-blue-600">
+                <!-- Botão de voltar para a págia anterior(quando tiver) -->
+                <!-- <a href="index.html" class="mr-4 text-gray-600 hover:text-blue-600">
                     <i class="fas fa-arrow-left"></i>
-                </a>
+                </a> -->
                 <i class="fas fa-book-medical text-xl text-blue-500 mr-2"></i>
-                <h1 class="text-lg sm:text-xl font-bold text-gray-800">MedNotes - Admin Center</h1>
+                <h1 class="text-lg sm:text-xl font-bold text-[var(--text-color)]">MedNotes - Admin Center</h1>
             </div>
             
             <div class="flex items-center gap-2 self-end sm:self-auto">
@@ -45,11 +46,11 @@
         <!-- Seção de Usuários -->
         <div class="rounded-xl shadow-md p-4 sm:p-6 mb-6" style="background-color: var(--card-bg); border: 1px solid var(--border-color);">
             <div class="flex justify-between items-center mb-4">
-                <h2 class="text-base sm:text-lg font-semibold text-gray-800">Gerenciamento de Usuários</h2>
+                <h2 class="text-base sm:text-lg font-semibold text-[var(--text-color)]">Gerenciamento de Usuários</h2>
             </div>
 
             <!-- Grupos de Usuários -->
-            <div id="users-by-role ">
+            <div id="users-by-role">
                 <!-- Os usuários serão organizados por função aqui -->
             </div>
         </div>
