--- a/public/admin/configADM.html
+++ b/public/admin/configADM.html
@@ -57,9 +57,9 @@
 
         <!-- Modal de Adicionar/Editar Usuário -->
         <div id="user-form-modal" class="hidden fixed inset-0 bg-black bg-opacity-50 z-50 flex items-center justify-center p-2 sm:p-4">
-            <div class="bg-white rounded-xl p-4 sm:p-6 w-full max-w-md mx-2">
+            <div class="rounded-xl p-4 sm:p-6 w-full max-w-md mx-2" style="background-color: var(--card-bg); border: 1px solid var(--border-color);">
                 <div class="flex justify-between items-center mb-4">
-                    <h2 id="form-modal-title" class="text-lg font-semibold">Adicionar Novo Usuário</h2>
+                    <h2 id="form-modal-title" class="text-lg font-semibold" style="color: var(--text-color);">Adicionar Novo Usuário</h2>
                     <button id="close-form-modal" class="text-gray-500 hover:text-gray-700">
                         <i class="fas fa-times"></i>
                     </button>
@@ -67,26 +67,26 @@
                 <form id="user-form" class="space-y-3 sm:space-y-4">
                     <input type="hidden" id="user-id">
                     <div>
-                        <label for="name" class="block text-sm font-medium text-gray-700">Nome</label>
-                        <input type="text" id="name" name="name" required class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-1 sm:py-2 px-2 sm:px-3 focus:outline-none focus:ring-blue-500 focus:border-blue-500 text-sm sm:text-base">
+                        <label for="name" class="block text-sm font-medium" style="color: var(--text-color);">Nome</label>
+                        <input type="text" id="name" name="name" required class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-1 sm:py-2 px-2 sm:px-3 focus:outline-none focus:ring-blue-500 focus:border-blue-500 text-sm sm:text-base" style="background-color: var(--bg-color); color: var(--text-color); border: 1px solid var(--border-color);">
                     </div>
                     <div>
-                        <label for="email" class="block text-sm font-medium text-gray-700">E-mail</label>
-                        <input type="email" id="email" name="email" required class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-1 sm:py-2 px-2 sm:px-3 focus:outline-none focus:ring-blue-500 focus:border-blue-500 text-sm sm:text-base">
+                        <label for="email" class="block text-sm font-medium" style="color: var(--text-color);">E-mail</label>
+                        <input type="email" id="email" name="email" required class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-1 sm:py-2 px-2 sm:px-3 focus:outline-none focus:ring-blue-500 focus:border-blue-500 text-sm sm:text-base" style="background-color: var(--bg-color); color: var(--text-color); border: 1px solid var(--border-color);">
                     </div>
                     <div class="relative">
-                        <label for="password" class="block text-sm font-medium text-gray-700">Senha</label>
+                        <label for="password" class="block text-sm font-medium" style="color: var(--text-color);">Senha</label>
                         <div class="relative mt-1">
                             <input type="password" id="password" name="password" required
-                                class="block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 pr-10 focus:outline-none focus:ring-blue-500 focus:border-blue-500 text-sm">
+                                class="block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 pr-10 focus:outline-none focus:ring-blue-500 focus:border-blue-500 text-sm" style="background-color: var(--bg-color); color: var(--text-color); border: 1px solid var(--border-color);">
                             <button type="button" id="toggle-password" class="absolute inset-y-0 right-0 pr-3 flex items-center text-gray-400 hover:text-gray-600">
                                 <i class="far fa-eye"></i>
                             </button>
                         </div>
                     </div>
                     <div>
-                        <label for="role" class="block text-sm font-medium text-gray-700">Função</label>
-                        <select id="role" name="role" required class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-1 sm:py-2 px-2 sm:px-3 focus:outline-none focus:ring-blue-500 focus:border-blue-500 text-sm sm:text-base">
+                        <label for="role" class="block text-sm font-medium" tyle="color: var(--text-color);">Função</label>
+                        <select id="role" name="role" required class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-1 sm:py-2 px-2 sm:px-3 focus:outline-none focus:ring-blue-500 focus:border-blue-500 text-sm sm:text-base" style="background-color: var(--bg-color); color: var(--text-color); border: 1px solid var(--border-color);">
                             <option value="">Selecione uma função</option>
                             <option value="Administrador">Administrador</option>
                             <option value="Professor">Professor</option>
@@ -94,10 +94,10 @@
                         </select>
                     </div>
                     <div class="flex justify-end gap-2 sm:space-x-2">
-                        <button type="button" id="cancel-form" class="px-3 py-1 sm:px-4 sm:py-2 border border-gray-300 rounded-lg hover:bg-gray-50 text-sm sm:text-base">
+                        <button type="button" id="cancel-form" class="px-3 py-1 sm:px-4 sm:py-2 border rounded-lg hover:bg-gray-50 text-sm sm:text-base" style="border: 1px solid var(--border-color); color: var(--text-color); background-color: var(--light-gray);">
                             Cancelar
                         </button>
-                        <button type="submit" class="px-3 py-1 sm:px-4 sm:py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600 text-sm sm:text-base">
+                        <button type="submit" class="px-3 py-1 sm:px-4 sm:py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600 text-sm sm:text-base" style="background-color: var(--primary-color);">
                             Salvar
                         </button>
                     </div>
@@ -107,9 +107,9 @@
 
         <!-- Modal de Detalhes do Usuário -->
         <div id="user-details-modal" class="hidden fixed inset-0 bg-black bg-opacity-50 z-50 flex items-center justify-center p-2 sm:p-4">
-            <div class="bg-white rounded-xl p-4 sm:p-6 w-full max-w-md mx-2 max-h-[90vh] overflow-y-auto">
+            <div class="rounded-xl p-4 sm:p-6 w-full max-w-md mx-2 max-h-[90vh] overflow-y-auto" style="background-color: var(--card-bg); border: 1px solid var(--border-color);">
                 <div class="flex justify-between items-center mb-4">
-                    <h2 class="text-lg font-semibold">Detalhes do Usuário</h2>
+                    <h2 class="text-lg font-semibold" style="color: var(--text-color);">Detalhes do Usuário</h2>
                     <button id="close-user-modal" class="text-gray-500 hover:text-gray-700">
                         <i class="fas fa-times"></i>
                     </button>
@@ -118,7 +118,7 @@
                     <!-- Detalhes do usuário serão inseridos aqui -->
                 </div>
                 <div class="mt-4 flex flex-col sm:flex-row justify-end gap-2 sm:space-x-2">
-                    <button class="px-3 py-1 sm:px-4 sm:py-2 border border-gray-300 rounded-lg hover:bg-gray-50 text-sm sm:text-base">
+                    <button class="px-3 py-1 sm:px-4 sm:py-2 border border-gray-300 rounded-lg hover:bg-gray-50 text-sm sm:text-base" style="border: 1px solid var(--border-color); color: var(--text-color); background-color: var(--light-gray);">
                         Editar
                     </button>
                     <button class="px-3 py-1 sm:px-4 sm:py-2 bg-red-500 text-white rounded-lg hover:bg-red-600 text-sm sm:text-base">
