Feito a alteração da pagina do administrador para funcionar no nosso dhashebord no php

--- a/public/admin/administrador.html
+++ b/public/admin/administrador.html
@@ -7,7 +7,7 @@
     <title>Configurações - MedNotes</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="configADM.css">
+    <link rel="stylesheet" href="administrador.css">
     <link rel="shortcut icon" type="image/svg" href="/logo-aba_book-medical-solid.svg"/>
 </head>
 
