--- a/public/aluno/aluno.html
+++ b/public/aluno/aluno.html
@@ -7,7 +7,7 @@
     <title>MedNotes - Caderneta Digital</title>
     
     <!-- Links para folhas de estilo e bibliotecas externas -->
-    <link rel="stylesheet" href="alunoUso.css">
+    <link rel="stylesheet" href="aluno.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="shortcut icon" type="image/svg" href="/logo-aba_book-medical-solid.svg"/>
     
